infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
#how behave - spec
spec:
  # num of pods running some image - 1 pod here
  replicas: 1
  # selector and metadata directs the deployment to which pods it should manage in cluster. template - metadata = type of pod to make
  selector:
    matchLabels:
      app: moderation
      #template describes how all different pods should be created by deployment
  template:
    metadata:
      #appies identifer to pod to be created
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: jclk86/moderation:latest
# cluster ip service -- can do in separate k8s file if you want, but 1:1 with deployment they allow access to
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
  # select what pod to allow access to
spec:
  selector:
    app: moderation
  type: ClusterIP #optional -- or will default
  ports: #check index.js of moderation service
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
