infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
#how behave - spec
spec:
  # num of pods running some image - 1 pod here
  replicas: 1
  # selector and metadata directs the deployment to which pods it should manage in cluster. template - metadata = type of pod to make
  selector:
    matchLabels:
      app: query
      #template describes how all different pods should be created by deployment
  template:
    metadata:
      #appies identifer to pod to be created
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: jclk86/query:latest
# cluster ip service -- can do in separate k8s file if you want, but 1:1 with deployment they allow access to
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
  # select what pod to allow access to
spec:
  selector:
    app: query
  type: ClusterIP #optional -- or will default
  ports: #check index.js of query service
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
