infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations: # help ingress controller understand that we are feeding it routing rules - scan s for nginx for routing rules
    kubernetes.io/ingress.class: nginx
    # for wildcard/ reg expression for paths
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules: #teach ingress ontroller how to take incoming traffic and route them to pods - look at depls for below - posts.com can be anyting you want... just make sure you got to that hosts file (see your notes for hosts file config fix in windows/system32/driver/etc/hosts and map 127.0.01 to whatever yoy changed posts.com to - only for dev environment not for production. the real posts.com is in k8 cluster). tricks ingress-nginx to routing posts.com to localhost
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4000
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port:
                  number: 4002
                # See wildcard - posts need comment id
          - path: /posts/?(.*)/comments
            pathType: Prefix
            backend:
              service:
                name: comments-srv
                port:
                  number: 4001
                # need wildcard for react router and like react routes needs to be at end -- matches any path and makes sure to use react app
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
# Package from the k8 above to use

#  Lambda Functions - no name and only returns values
